# diabetes-prediction-orange

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/core/: contributions.py  datasets.py  introspect.py  predict.py  registry.py
backend/app/routes/: datasets.py  models.py  predict.py
backend/datasets/: DiaBD_A.csv  DiaBD_without-BSL.csv
backend/models/: DM2 with glucose workflo.pkcls  DM2 without glucose workflo.pkcls  DMdataset2 with glucose.ows  DMdataset2 without glucose.ows
backend/tests/: conftest.py  test_datasets.py  test_introspect.py  test_predict.py  test_routes_batch.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: api-client.ts  globals.css  layout.tsx  page.tsx
frontend/components/: BatchPredictPanel.tsx  BatchResultsTable.tsx  ContributionsChart.tsx  DynamicForm.tsx  ModelDemo.tsx  ModelPicker.tsx  ResultsPanel.tsx  SampleRowButton.tsx  UploadTile.tsx
scripts/: start.sh
