[project]
name = "orange-model-demo-backend"
version = "0.1.0"
description = "FastAPI backend that serves Orange Data Mining .pkcls models"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "Orange3==3.40.0",
    "PyQt5>=5.15.10",
    "AnyQt>=0.2.0",
    "numpy<2",
    "scikit-learn>=1.4",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.core", "app.routes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
